; ModuleID = '/home/carl/AnghaBench/linux/drivers/power/supply/extr_smb347-charger.c_smb347_is_ps_online.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/power/supply/extr_smb347-charger.c_smb347_is_ps_online.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smb347_charger = type { i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.smb347_charger*)* @smb347_is_ps_online to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smb347_is_ps_online(%struct.smb347_charger* %0) #0 {
  %2 = alloca %struct.smb347_charger*, align 8
  %3 = alloca i32, align 4
  store %struct.smb347_charger* %0, %struct.smb347_charger** %2, align 8
  %4 = load %struct.smb347_charger*, %struct.smb347_charger** %2, align 8
  %5 = getelementptr inbounds %struct.smb347_charger, %struct.smb347_charger* %4, i32 0, i32 0
  %6 = call i32 @mutex_lock(i32* %5)
  %7 = load %struct.smb347_charger*, %struct.smb347_charger** %2, align 8
  %8 = getelementptr inbounds %struct.smb347_charger, %struct.smb347_charger* %7, i32 0, i32 2
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %16, label %11

11:                                               ; preds = %1
  %12 = load %struct.smb347_charger*, %struct.smb347_charger** %2, align 8
  %13 = getelementptr inbounds %struct.smb347_charger, %struct.smb347_charger* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br label %16

16:                                               ; preds = %11, %1
  %17 = phi i1 [ true, %1 ], [ %15, %11 ]
  %18 = zext i1 %17 to i32
  store i32 %18, i32* %3, align 4
  %19 = load %struct.smb347_charger*, %struct.smb347_charger** %2, align 8
  %20 = getelementptr inbounds %struct.smb347_charger, %struct.smb347_charger* %19, i32 0, i32 0
  %21 = call i32 @mutex_unlock(i32* %20)
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
